fix: mis-aligned titles

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -91,7 +91,7 @@ h5 .header-anchor,
 h6 .header-anchor {
   opacity: 0;
   transition: opacity 0.2s;
-  margin-left: -1em;
+  margin-left: -0.9em;
   text-decoration: none;
 }
 
